# why2025-firmware-fork

./: .gitignore  AUTHORS  README.md  upload-to-badgehub.sh
badgevms/: symbols.yml  task.c  wrapped_funcs.c
badgevms/compositor/: compositor.c  compositor_private.h  window_decorations.c
badgevms/drivers/: wifi.c
flash_storage/skel/: init.toml
flash_storage/skel/BADGEVMS/APPS/: mpy.json  mpydaemon.json
flash_storage/skel/BADGEVMS/APPS/mpy/: mpy.elf
flash_storage/skel/BADGEVMS/APPS/mpydaemon/: mpydaemon.py
sdk_apps/: CMakeLists.txt
sdk_apps/bme690_test/: bme690_test.c
sdk_apps/hardware_test/: run_tests.c  test_badge.c
sdk_apps/hello_flasher/: hello_flasher.c  manifest.json
sdk_apps/memtester/: getopt.c  manifest.json  memtester.c  memtester.h  sizes.h  tests.c  tests.h  types.h
sdk_apps/sdl2_test/: manifest.json  sdl2_test.c
sdk_apps/test_badge_hub_client/: CMakeLists.txt  app_card.c  app_card.h  badgehub_client.c  badgehub_client.h  badgehub_client_new.c  badgehub_client_new.h  cJSON.c  down_man.c  down_man.h  main.c  manifest.json  test_drawing_helper.h  utils.c  utils.h
sdk_apps/test_badge_hub_client/old/: app_data_manager.c  app_list.c  app_list.h
sdk_apps/test_badghub_client/: app_card.c  app_card.h  app_detail.c  app_home.c  app_home.h  badgehub_client.c  badgehub_client.h  down_man.c  down_man.h  main.c  manifest.json  test_drawing_helper.c  utils.c  utils.h
sdk_apps/test_badghub_client/old/: app_data_manager.h  app_detail.h  os_client.c
sdk_libs/: CMakeLists.txt
sdk_libs/sdl2/: CMakeLists.txt
sdk_libs/sdl2/SDL2/src/dynapi/: SDL_dynapi.h
sdk_libs/sdl2/SDL2/src/video/: SDL_sysvideo.h  SDL_video.c
sdk_libs/sdl2/include/: SDL_config.h
sdk_libs/sdl2/src/video/: SDL_badgevmsevents.c  SDL_badgevmsevents_c.h  SDL_badgevmsframebuffer.c  SDL_badgevmsframebuffer_c.h  SDL_badgevmsvideo.c  SDL_badgevmsvideo.h
