set(SDL2_SOURCES
    SDL2/src/SDL.c
    SDL2/src/SDL_assert.c
    SDL2/src/SDL_dataqueue.c
    SDL2/src/SDL_error.c
    SDL2/src/SDL_guid.c
    SDL2/src/SDL_hints.c
    SDL2/src/SDL_list.c
    SDL2/src/SDL_log.c
    SDL2/src/SDL_utils.c
    SDL2/src/atomic/SDL_spinlock.c
    SDL2/src/atomic/SDL_atomic.c
    SDL2/src/audio/SDL_audio.c
    SDL2/src/audio/SDL_audiocvt.c
    SDL2/src/audio/SDL_audiodev.c
    SDL2/src/audio/SDL_audiotypecvt.c
    SDL2/src/audio/SDL_mixer.c
    SDL2/src/audio/SDL_wave.c
    SDL2/src/audio/dummy/SDL_dummyaudio.c
    SDL2/src/cpuinfo/SDL_cpuinfo.c
    SDL2/src/events/SDL_displayevents.c
    SDL2/src/events/SDL_dropevents.c
    SDL2/src/events/SDL_events.c
    SDL2/src/events/SDL_gesture.c
    SDL2/src/events/SDL_keyboard.c
    SDL2/src/events/SDL_keysym_to_scancode.c
    SDL2/src/events/SDL_mouse.c
    SDL2/src/events/SDL_touch.c
    SDL2/src/events/SDL_quit.c
    SDL2/src/events/SDL_scancode_tables.c
    SDL2/src/events/SDL_windowevents.c
    SDL2/src/events/imKStoUCS.c
    SDL2/src/filesystem/dummy/SDL_sysfilesystem.c
    SDL2/src/joystick/SDL_joystick.c
    SDL2/src/libm/e_atan2.c
    SDL2/src/libm/e_exp.c
    SDL2/src/libm/e_fmod.c
    SDL2/src/libm/e_log.c
    SDL2/src/libm/e_log10.c
    SDL2/src/libm/e_pow.c
    SDL2/src/libm/e_rem_pio2.c
    SDL2/src/libm/e_sqrt.c
    SDL2/src/libm/k_cos.c
    SDL2/src/libm/k_rem_pio2.c
    SDL2/src/libm/k_sin.c
    SDL2/src/libm/k_tan.c
    SDL2/src/libm/s_atan.c
    SDL2/src/libm/s_copysign.c
    SDL2/src/libm/s_cos.c
    SDL2/src/libm/s_fabs.c
    SDL2/src/libm/s_floor.c
    SDL2/src/libm/s_scalbn.c
    SDL2/src/libm/s_sin.c
    SDL2/src/libm/s_tan.c
    SDL2/src/loadso/dummy/SDL_sysloadso.c
    SDL2/src/locale/SDL_locale.c
    SDL2/src/locale/dummy/SDL_syslocale.c
    SDL2/src/main/dummy/SDL_dummy_main.c
    SDL2/src/misc/SDL_url.c
    SDL2/src/misc/dummy/SDL_sysurl.c
    SDL2/src/power/SDL_power.c
    SDL2/src/render/SDL_render.c
    SDL2/src/render/SDL_yuv_sw.c
    SDL2/src/render/software/SDL_blendfillrect.c
    SDL2/src/render/software/SDL_blendline.c
    SDL2/src/render/software/SDL_blendpoint.c
    SDL2/src/render/software/SDL_drawline.c
    SDL2/src/render/software/SDL_drawpoint.c
    SDL2/src/render/software/SDL_render_sw.c
    SDL2/src/render/software/SDL_rotate.c
    SDL2/src/render/software/SDL_triangle.c
    SDL2/src/thread/SDL_thread.c
    SDL2/src/timer/SDL_timer.c
    SDL2/src/video/SDL_RLEaccel.c
    SDL2/src/video/SDL_blit.c
    SDL2/src/video/SDL_blit_0.c
    SDL2/src/video/SDL_blit_1.c
    SDL2/src/video/SDL_blit_A.c
    SDL2/src/video/SDL_blit_N.c
    SDL2/src/video/SDL_blit_auto.c
    SDL2/src/video/SDL_blit_copy.c
    SDL2/src/video/SDL_blit_slow.c
    SDL2/src/video/SDL_bmp.c
    SDL2/src/video/SDL_clipboard.c
    SDL2/src/video/SDL_fillrect.c
    SDL2/src/video/SDL_pixels.c
    SDL2/src/video/SDL_rect.c
    SDL2/src/video/SDL_stretch.c
    SDL2/src/video/SDL_surface.c
    SDL2/src/video/SDL_video.c
    SDL2/src/video/SDL_yuv.c
    SDL2/src/video/dummy/SDL_nullevents.c
    SDL2/src/video/dummy/SDL_nullframebuffer.c
    SDL2/src/video/dummy/SDL_nullvideo.c
    SDL2/src/video/yuv2rgb/yuv_rgb_lsx.c
    SDL2/src/video/yuv2rgb/yuv_rgb_sse.c
    SDL2/src/video/yuv2rgb/yuv_rgb_std.c
    SDL2/src/stdlib/SDL_crc16.c
    SDL2/src/stdlib/SDL_crc32.c
    SDL2/src/stdlib/SDL_getenv.c
    SDL2/src/stdlib/SDL_iconv.c
    SDL2/src/stdlib/SDL_malloc.c
    SDL2/src/stdlib/SDL_mslibc.c
    SDL2/src/stdlib/SDL_qsort.c
    SDL2/src/stdlib/SDL_stdlib.c
    SDL2/src/stdlib/SDL_string.c
    SDL2/src/stdlib/SDL_strtokr.c
    SDL2/src/thread/generic/SDL_syscond.c
    SDL2/src/thread/generic/SDL_sysmutex.c
    SDL2/src/thread/generic/SDL_syssem.c
    SDL2/src/thread/generic/SDL_systhread.c
    SDL2/src/thread/generic/SDL_systls.c
    SDL2/src/main/dummy/SDL_dummy_main.c
    SDL2/src/timer/unix/SDL_systimer.c
    SDL2/src/sensor/dummy/SDL_dummysensor.c
    SDL2/src/sensor/SDL_sensor.c
    src/video/SDL_badgevmsframebuffer.c
    src/video/SDL_badgevmsevents.c
    src/video/SDL_badgevmsvideo.c
)

add_library(sdl2 STATIC ${SDL2_SOURCES})

target_compile_definitions(sdl2 PRIVATE
)

target_include_directories(sdl2 PRIVATE
  include
  SDL2/src
  SDL2/src/video
  SDL2/include
)
